<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ngecafe Yuk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Ngecafe Yuk</string>
    <string name="title_activity_regis">Register</string>
    <string name="title_activity_all_fragment">Ngecafe Yuk</string>
    <string name="title_activity_kekinian_fragment">Ngecafe Yuk</string>
    <string name="title_activity_jam_fragment">Ngecafe Yuk</string>
    <string name="title_activity_wifi_fragment">Ngecafe Yuk</string>
    <string name="title_activity_live_music_fragment">Ngecafe Yuk</string>
    <string name="tvAlamat">Alamat : </string>
    <string name="tvCafe1">Chatime</string>
    <string name="tvCafe2">Jank Jank Wings</string>
    <string name="tvCafe3">La Casa Pizza</string>
    <string name="tvCafe4">Sate Taichan Goreng</string>
    <string name="tvCafe5">Ayam Gunting "Taiwan Street Snack"</string>
    <string name="tvCafe6">Sate Taichan "Om Ganteng</string>
    <string name="tvCafe7">Burger Time</string>
    <string name="tvAlCafe1">Palembang Square Mall, Palembang Icon..</string>
    <string name="tvAlCafe2">Jl. Inspekstur Marzuki, Siring ..</string>
    <string name="tvAlCafe3">Jl. Mayor Ruslan, 9 Ilir</string>
    <string name="tvAlCafe4">Jl. Sumpah Pemuda</string>
    <string name="tvAlCafe5">Jl. Parameswara</string>
    <string name="tvAlCafe6">Jl. Veteran</string>
    <string name="tvAlCafe7">Jl. Rambutan NO. 24</string>
    <string name="tvJam1">KFC</string>
    <string name="tvJam2">Tajmahal Cafe</string>
    <string name="tvJam3">Coffe Shop Hotel Anugrah</string>
    <string name="tvJam4">Dunkin Donuts</string>
    <string name="tvJam5">Mc Donald</string>
    <string name="tvAlJam1">Jl. Merdeka, Ramayana, PTC Mall..</string>
    <string name="tvAlJam2">Jl. Radial, 24 Ilir</string>
    <string name="tvAlJam3">Jl. Jend. Sudirman</string>
    <string name="tvAlJam4">Jl. Demang Lebar Daun</string>
    <string name="tvAlJam5">Jl. Jend. Sudirman No. 149, Jl. R. Soekamto No. 90</string>
    <string name="tvWifi1">Hompizz Pizza Cafe n Resto</string>
    <string name="tvWifi2">Ayam Sriwijaya</string>
    <string name="tvWifi3">Starbucks</string>
    <string name="tvWifi4">Roti Bakar Narsis</string>
    <string name="tvWifi5">Warunk Upnormal</string>
    <string name="tvWifi6">The Hotspot Cafe</string>
    <string name="tvWifi7">Basengla Resto n House of Joy</string>
    <string name="tvWifi8">Teh Aba</string>
    <string name="tvWifi9">FlowerTage Cafe</string>
    <string name="tvAlWif1">Jl. dr. Cipto, 30 Ilir, Ilir Barat 2</string>
    <string name="tvAlWif2">Jl. Bidar, Jl. Lorok Pakjo, Ilir Barat 1</string>
    <string name="tvAlWif3">Palembang Icon Mall Lt. Ground, PIM</string>
    <string name="tvAlWif4">Jl. Kapt. A Rivai</string>
    <string name="tvAlWif5">Jl. Radial No. 10/11, Jl. R. Soekamto No. 88</string>
    <string name="tvAlWif6">Jl. Supeno No. 7</string>
    <string name="tvAlWif7">Jl. Wijaya Kusuma No. 11</string>
    <string name="tvAlWif8">Jl. Kapt. A Rivai No. 690</string>
    <string name="tvAlWif9">Jl. Hang Tuah No. 12</string>
    <string name="tvMus1">South Station</string>
    <string name="tvMus2">Meetup Cafe</string>
    <string name="tvMus3">Gunz Cafe n Resto</string>
    <string name="tvMus4">Bingen Cafe</string>
    <string name="tvMus5">York Cafe</string>
    <string name="tvAlMus1">Jl. KH. Ahmad Dahlan No. 29</string>
    <string name="tvAlMus2">Jl. Demang Lebar Daun No. 3547</string>
    <string name="tvAlMus3">Jl. Tasik No. 7</string>
    <string name="tvAlMus4">Jl. Residen Abdul Rozak No. 5</string>
    <string name="tvAlMus5">Jl. Basuki Rahmat No. 3 Palembang</string>
    <string name="title_activity_chatime">Chatime</string>
    <string name="str_tv_start">LIHAT MENU</string>
    <string name="str_tv_stop">BERHENTI</string>
    <string name="title_activity_jank">Jank Jank Wings</string>
    <string name="title_activity_lacasa">La Casa Pizza</string>
    <string name="title_activity_taichanreng">Sate Taichan Goreng</string>
    <string name="title_activity_taiwan">Ayam Gunting Taiwan Street</string>
    <string name="title_activity_omganteng">Sate Taichan Om Ganteng</string>
    <string name="title_activity_burger">Burger Time</string>
    <string name="title_activity_kfc">KFC</string>
    <string name="title_activity_tajmahal">Tajmahal Cafe</string>
    <string name="title_activity_coffee">Coffe Shop</string>
    <string name="title_activity_dunkin">Dunkin Donuts</string>
    <string name="title_activity_donald">Mc Donald</string>
    <string name="title_activity_south">South Station</string>
    <string name="title_activity_meetup">Meetup Cafe</string>
    <string name="title_activity_gunz">Gunz Cafe n Resto</string>
    <string name="title_activity_bingen">Bingen Cafe</string>
    <string name="title_activity_york">York Cafe</string>
    <string name="title_activity_hompiz">Hompizz Pizza</string>
    <string name="title_activity_sriwijaya">Ayam Sriwijaya</string>
    <string name="title_activity_starbuck">Starbucks</string>
    <string name="title_activity_narsis">NarsisActivity</string>
    <string name="title_activity_upnormal">Warunk Upnormal</string>
    <string name="title_activity_hotspot">The Hotspot</string>
    <string name="title_activity_basengla">Basengla Resto</string>
    <string name="title_activity_aba">Teh Aba</string>
    <string name="title_activity_flower">Flowertage Cafe</string>
    <string name="title_activity_pos_chatime">PosChatimeActivity</string>
    <string name="title_activity_pos_taiwan">PosTaiwanActivity</string>
    <string name="title_activity_pos_taigor">PosTaigor</string>
    <string name="title_activity_pos_tai_ganteng">PosTaiGanteng</string>
    <string name="title_activity_pos_abah">PosAbah</string>
    <string name="title_activity_pos_basengla">PosBasengla</string>
    <string name="title_activity_pos_bingen">PosBingen</string>
    <string name="title_activity_pos_burger">PosBurger</string>
    <string name="title_activity_pos_coffee">PosCoffee</string>
    <string name="title_activity_pos_donald">PosDonald</string>
    <string name="title_activity_pos_dunkin">PosDunkin</string>
    <string name="title_activity_pos_flower">PosFlower</string>
    <string name="title_activity_pos_gunz">PosGunz</string>
    <string name="title_activity_pos_hompiz">PosHompiz</string>
    <string name="title_activity_pos_hotspot">PosHotspot</string>
    <string name="title_activity_pos_jank">PosJank</string>
    <string name="title_activity_pos_kfc">PosKfc</string>
    <string name="title_activity_pos_lacasa">PosLacasa</string>
    <string name="title_activity_pos_meetup">PosMeetup</string>
    <string name="title_activity_pos_narsis">PosNarsis</string>
    <string name="title_activity_pos_south">PosSouth</string>
    <string name="title_activity_pos_sriwijaya">PosSriwijaya</string>
    <string name="title_activity_pos_starbucks">PosStarbucks</string>
    <string name="title_activity_pos_tajmahal">PosTajmahal</string>
    <string name="title_activity_pos_upnormal">PosUpnormal</string>
    <string name="title_activity_pos_york">PosYork</string>

</resources>
