<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AllFragment"
    android:background="#424142" >
     
    <ScrollView 
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@drawable/vertical_scrollview_bg"
        android:scrollbarTrackVertical="@drawable/vertical_scrollview_line">
        
       <LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
	       android:layout_marginLeft="8dp"
	       android:layout_marginRight="8dp"
           android:orientation="vertical">
           
	        <LinearLayout 
	            android:id="@+id/cafe1"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/chatime" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvCafe1"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlCafe1"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:id="@+id/cafe2"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	            android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/jankjankwings" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvCafe2"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlCafe2"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	         <LinearLayout 
	            android:id="@+id/cafe3"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	            android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/lacasapizza" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvCafe3"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlCafe3"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	         <LinearLayout 
	            android:id="@+id/cafe4"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/satetaichan" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvCafe4"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlCafe4"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	         <LinearLayout 
	            android:id="@+id/cafe5"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/streettaiwan" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvCafe5"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlCafe5"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	         <LinearLayout 
	            android:id="@+id/cafe6"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/omganteng" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvCafe6"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlCafe6"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	         <LinearLayout 
	            android:id="@+id/cafe7"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/burger1" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvCafe7"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlCafe7"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
        </LinearLayout>
    </ScrollView>
    
</LinearLayout>
