<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AllFragment"
    android:background="#424142" >
     
    <ScrollView 
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@drawable/vertical_scrollview_bg"
        android:scrollbarTrackVertical="@drawable/vertical_scrollview_line">
        
       <LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
	       android:layout_marginLeft="8dp"
	       android:layout_marginRight="8dp"
           android:orientation="vertical">
           
	        <LinearLayout 
	            android:id="@+id/lmus1"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/south" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvMus1"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlMus1"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:id="@+id/lmus2"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/meetup" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvMus2"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlMus2"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:id="@+id/lmus3"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/gunz" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvMus3"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlMus3"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:id="@+id/lmus4"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/bingen" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvMus4"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlMus4"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:id="@+id/lmus5"
	            android:layout_width="270dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	           	android:layout_marginBottom="8dp"
	            android:background="@drawable/layout_normal">
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="11dp"
	                android:orientation="horizontal">
	                
	                <ImageView
		                android:layout_width="135dp"
		                android:layout_height="80dp"
		                android:layout_marginTop="5dp"
		                android:src="@drawable/york" />
	                
	                <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
	                	
	                   <TextView 
	                       android:text="@string/tvMus5"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:textSize="15sp"
	                       android:textColor="#424142"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:layout_marginTop="3dp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:text="@string/tvAlamat"
	                       android:textSize="12sp"
	                       android:textStyle="bold"/>
	                   
	                   <TextView 
	                       android:text="@string/tvAlMus5"
	                       android:textSize="12sp"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"/>
	                
	              	</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	     </LinearLayout>
    </ScrollView>
    
</LinearLayout>
	        